# jpd

./: .gitignore  Cargo.toml  README.md  REFACTORING_SUMMARY.md  package.json
.github/workflows/: release.yaml
assets/: config.json
assets/games/Rainbow Six Siege/: data.json  game.json
assets/games/Rust/: data.json  game.json
src/: app.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: config.json
src-tauri/assets/games/Rainbow Six Siege/: data.json
src-tauri/assets/games/Rust/: data.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  recoil.rs  types.rs  winapi.rs
src-tauri/src/commands/: app.rs  config.rs  mod.rs  selection.rs  state.rs
src/components/: AccountPanel.svelte  Background.svelte  Banner.svelte  ButtonPanel.svelte  CategoryCard.svelte  ColorPicker.svelte  ConfigGroup.svelte  DangerZoneTab.svelte  GameCard.svelte  GameKeyField.svelte  KeybindsTab.svelte  LoadoutCard.svelte  StatField.svelte  TabContainer.svelte  Titlebar.svelte  UpdateDialog.svelte  VisualsTab.svelte  WeaponCard.svelte  WeaponStats.svelte
src/components/cards/: CategoryCard.svelte  GameCard.svelte  LoadoutCard.svelte  WeaponCard.svelte
src/components/tabs/: DangerZoneTab.svelte  KeybindsTab.svelte  VisualsTab.svelte
src/layouts/: AccountLayout.svelte  MainLayout.svelte  SettingsLayout.svelte
src/lib/: api.ts  tauriHelper.ts  theme.ts  themeManager.ts  types.ts
src/lib/styles/: global.css
src/routes/: +layout.svelte  +page.svelte
src/routes/account/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: state.ts
static/: global.css
