[package]
name = "clc-jpd"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clc_jpd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["windef", "winuser", "libloaderapi", "hidusage", "impl-default"] }
tokio = { version = "1.45.1", features = ["full"] }
window-vibrancy = "0.6.0"
anyhow = "1.0.98"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
tauri-plugin-fs = "2.4.0"
reqwest = { version = "0.12.22", features = ["json"] }
futures = "0.3.31"

